--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-pandas
-reportlab
-python-dateutil
-XlsxWriter
-Flask
-flask_cors
-numpy
-beautifulsoup4
-investpy
-requests
+beautifulsoup4==4.11.1
+Flask==2.2.1
+flask_cors==3.0.10
+investpy==1.0.8
+mstarpy==0.0.1
+numpy==1.23.1
+pandas ==1.4.3
+python-dateutil==2.8.2
+reportlab==3.6.11
+requests==2.28.1
+XlsxWriter==3.0.3
+
+
