--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "homepage": "./",
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:4000",
+  "proxy": "https://jtpnrui.cluster030.hosting.ovh.net/",
 
   "private": true,
   "dependencies": {
